--- a/index2.css
+++ b/index2.css
@@ -66,7 +66,7 @@ body::-webkit-scrollbar {
     .map {
         background-image: url(./assets/desktop/image-map@2x.png);
         background-repeat: no-repeat;
-        height: 550px;
+        height: 500px;
         width: 100vw;
         background-size: 100vw 550px;
     }
@@ -523,6 +523,8 @@ body::-webkit-scrollbar {
 
     .map {
         background-image: url(./assets/tablet/image-map.png);
+        background-size: 768px 600px;
+        background-repeat: no-repeat;
         height: 600px;
         width: 768px;
     }
