--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+@media screen and (min-width:1025px) {
+
 body::-webkit-scrollbar {
     display: none;
 }
@@ -244,13 +246,16 @@ body::-webkit-scrollbar {
         color: #ffffff;
     }
 
+    .section{
+        width:100%;
+    }
    
 
     /* Footer */
 
     .footer-container{
         height: 244px;
-        width: 100vw;
+        width: 100%;
         background-color: #151515;
         color: #ffffff;
         
@@ -332,67 +337,112 @@ body::-webkit-scrollbar {
         justify-content: space-between;
     }
 
+    #title{
+        display: none;
+    }
+/* Tablet images*/
+    #grid1-1{
+        width: 398px;
+        height:400px;
+        display: none;
+    }
+
+    .in-images1-1{
+        width: 398px;
+        height:400px;
+        display: none;
+    }
+
+    #grid2-1{
+        width: 398px;
+        height: 720px;
+        display: none;
+    }
+
+    .in-images2-1{
+        width: 398px;
+        height: 720px;
+        display: none;
+    }
+
+    #grid3-1{
+        width: 280px;
+        height: 313px;
+        display: none;
+        
+    }
+
+    .in-images3-1{
+        width: 280px;
+        height: 313px;
+        display: none;
+    }
 
 
+}
 
-/* Mobile view */
-
-@media screen and (max-width:500px) {
-
-    /* Desktop view */
-
-
+   /* Tablet View */
+   @media screen and (min-width:768px) and (max-width:1024px){
+   
     /* Header */
     .header-container{
         display: flex;
-        flex-direction: row;
-        width:1275px;
+        width:717px;
+        border:0px solid black;
     }
 
     .black-shape{
-        display:none;
         width: 450px;
         height: 800px;
         background-color: #151515;
+        display:none;
         
     }
 
     .hero #hero{
-        width:540px;
-        height:800px;
+        width:437px;
+        height:700px;
     }
 
-    .image-shape{
-        display: flex;
-    }
 
     .gale #gale{
         width:444px;
         height:167px;
         border:0px solid green;
+        display: none;
+    }
+
+    #title{
+        font-family: 'big shoulders display',sans-serif;
+        font-weight: 900;
+        font-size: 70px;
+        line-height: 65px;
     }
 
     
 
     #para-1{
-        width: 350px;
+        width: 339px;
         font-family:'outfit',sans-serif;
-        font-size: 22px;
-        line-height: 32px;
+        font-size: 18px;
+        line-height: 28px;
         font-weight: 300;
         color: #444444;
     }
 
     .loc-parra{
-        height:296px;
+        height:410px;
         width:350px;
+        position:absolute;
+        left:190px;
+        top:-40px;
         border:0px solid red;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
-    .location #location{
+    #location{
         width:204px;
         height:72px;
         border: hidden;
@@ -407,27 +457,14 @@ body::-webkit-scrollbar {
   
     
     a{
+        width:260px;
+        height:72px;
         text-decoration:none;
         display: flex;
         flex-direction: row;
     }
 
-    a:hover .loc-box {
-        background-color: #151515;
-    }
-
-    a:hover .location {
-        background-color: #d5966c;
-    }
-
-    a:hover #location {
-        background-color: #d5966c;
-    }
-
-
-    .location #location:hover {
-        cursor: pointer;
-    }
+   
 
     .loc-box{
         width: 56px;
@@ -440,7 +477,7 @@ body::-webkit-scrollbar {
         border:0px solid purple;
         display: flex;
         justify-content: space-between;
-        width:1110px;
+        width:500px;
         height:296px;
         position: absolute;
         left:170px;
@@ -451,10 +488,11 @@ body::-webkit-scrollbar {
     /* Section */
 
     section{
-        width:1110px;
-        height:1150px;
+        width:689px;
+        height:1131px;
         position: relative;
         top: 238px;
+        border:0px solid green;
         margin: 0 auto;
         display:flex;
         flex-direction: column;
@@ -462,78 +500,122 @@ body::-webkit-scrollbar {
     }
 
     .your{
-        width:1110px;
+        width:689px;
+        border: 0px solid red;
         display:flex;
         justify-content: space-between;
     }
 
    
     .your-day{
-        width: 350px;
+        width: 223px;
+        height:300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
     #your-day{
         font-family: 'big shoulders display',sans-serif;
-        font-size: 60px;
+        font-size: 50px;
         font-weight: 900;
-        line-height: 50px;
+        line-height: 45px;
         color: #151515;
     }
 
     #your-para{
         font-family:'outfit',sans-serif;
-        font-size: 22px;
-        line-height: 32px;
+        font-size: 18px;
+        line-height: 28px;
         font-weight: 300;
         color: #444444;
-        position: relative;
-        top: 50px;
     }
 
+    #grid1-1{
+        width: 398px;
+        height:400px;
+    }
+
+    .in-images1-1{
+        width: 398px;
+        height:400px;
+    }
+
+    #grid2-1{
+        width: 398px;
+        height: 720px;
+    }
+
+    .in-images2-1{
+        width: 398px;
+        height: 720px;
+    }
+
+    #grid3-1{
+        width: 280px;
+        height: 313px;
+        
+    }
+
+    .in-images3-1{
+        width: 280px;
+        height: 313px;
+    }
+
+    /* desktop images*/
     #grid1{
         width: 635px;
         height:400px;
+        display: none;
     }
 
     .in-images1{
         width: 635px;
         height:400px;
+        display:none;
     }
+    
 
     #grid2{
         width: 635px;
         height: 720px;
+        display: none;
     }
 
     .in-images2{
         width: 635px;
         height: 720px;
+        display: none;
     }
 
     #grid3{
         width: 445px;
         height: 313px;
+        display: none;
     }
 
     .in-images3{
         width: 445px;
         height: 313px;
+        display: none;
     }
+
+    /* desktop image*/
 
 
     .ins-move{
-        width: 445px;
-        height: 377px;
+        width: 280px;
+        height: 396px;
     }
 
-    .your2{
-        height: 720px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+   .your2{
+       display: flex;
+       flex-direction: column;
+       justify-content: space-between;
+       border:0px solid peru;
+   }
 
     .your-main{
-        width:1110px;
+        width:689px;
         display: flex;
         justify-content: space-between;
     }
@@ -541,8 +623,8 @@ body::-webkit-scrollbar {
 
 
     .inspired{
-        width: 445px;
-        height: 377px;
+        width: 280px;
+        height: 396px;
         background-color: #151515;
         display: flex;
         align-items: center;
@@ -552,33 +634,39 @@ body::-webkit-scrollbar {
 
 
     .ins-text{
-        width:350px;
-        margin:auto;
+        width:223px;
+        height:226px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     #come-inspired{
         font-family: 'big shoulders display',sans-serif;
-        font-size: 60px;
+        font-size: 50px;
         font-weight: 900;
-        line-height: 50px;
+        line-height: 45px;
         color: #ffffff;
     }
 
     #inspired-para{
-        padding-top:43px;
         font-family:'outfit',sans-serif;
-        font-size: 22px;
-        line-height: 32px;
+        font-size: 18px;
+        line-height: 28px;
         font-weight: 300;
         color: #ffffff;
     }
 
+    .section{
+        width:100%;
+    }
    
 
     /* Footer */
 
     .footer-container{
-        height: 244px;
+        height: 216px;
         width: 100vw;
         background-color: #151515;
         color: #ffffff;
@@ -587,24 +675,25 @@ body::-webkit-scrollbar {
     }
     
     .gallery-text {
-        width: 80%;
+        width: 90%;
         margin: auto;
         position: relative;
-        top: 81px;
+        top: 71px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
     #gallery {
+        width:110.05px;
         font-family: 'big shoulders display', sans-serif;
-        font-size: 36px;
+        font-size: 20px;
         font-weight: 900;
-        line-height: 36px;
+        line-height: 20px;
     }
 
     #gallery-para {
-        width: 369px;
+        width: 281px;
         font-family: 'outfit', sans-serif;
         font-size: 16px;
         line-height: 26px;
@@ -628,39 +717,24 @@ body::-webkit-scrollbar {
         height: 20px;
     }
 
-    #facebook:hover path{
-        cursor:pointer;
-        fill: #d5966c;
-    }
-
+    
     #instagram {
         width: 20px;
         height: 20px;
     }
 
-    #instagram:hover path{
-        cursor:pointer;
-        fill: #d5966c;
-    }
-
-    #twitter {
-        width: 20px;
-        height: 16.25px;
-        
-    }
-
-    #twitter:hover path{
-        cursor:pointer;
-        fill: #d5966c;
-    }
-
     .sec-foot{
-        height: 1574px;
+        height: 1467px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
 
+
 }
-    
+
+
+
+
+ 
